--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,6 @@ body {
 	.left .logo {
 		width: calc(var(--gaps) * 3);
 		height: calc(var(--gaps) * 3);
-		/* background-color: var(--color-mint); */
 		background: linear-gradient(.375turn, var(--color-mint) 0%, var(--color-violet));
 		border-radius: 100vh;
 
@@ -124,19 +123,6 @@ main {
 	padding: var(--gaps);
 	border-radius: var(--radius);
 	height: auto;
-
-	a {
-		color: var(--color-mint);
-
-		&:visited {
-			text-decoration: none;
-			color: var(--color-mint);
-
-			&:hover {
-				color: var(--color-hot-pink);
-			}
-		}
-	}
 }
 
 footer {
@@ -145,20 +131,31 @@ footer {
 	text-align: center;
 }
 
-/* Boxes */
 
+a {
+	color: var(--color-mint);
+	text-decoration: none;
+
+	&:visited {
+		color: var(--color-mint);
+	}
+
+	&:hover {
+		text-decoration: underline;
+		color: var(--color-hot-pink);
+	}
+}
+
+/* Boxes */
 .container .item {
 	color: var(--background);
 	background-color: var(--color-sky);
-
 	p {
 		text-align: center;
-
 	}
 }
 
 main .container {
-
 	display: flex;
 	gap: 1em;
 
@@ -175,7 +172,6 @@ main .container {
 	from {
 		transform: rotate(0deg);
 	}
-
 	to {
 		transform: rotate(360deg);
 	}
