--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,8 @@ body {
 
 		&:hover {
 			transform: rotate(.5turn);
+			background: linear-gradient(.375turn, var(--color-hot-pink) 0%, var(--color-sky));
 		}
-
-		/* transition: all .5s cubic-bezier(0.16, 1, 0.3, 1); */
 	}
 
 	.right {
