--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
 
 /* Utility */
 .animate {
-	transition: all .33s cubic-bezier(0.16, 1, 0.3, 1);
+	transition: all .5s cubic-bezier(0.16, 1, 0.3, 1);
 	/* transition-property: color,background-color,outline,border; */
 }
 
@@ -165,10 +165,10 @@ a {
 
 /* Boxes */
 
-#box-container {
+#boxes-container {
 	display: flex;
 	gap: 1em;
-
+	line-height: 0;
 	.item {
 		display: inline-block;
 		width: 10em;
