--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ body {
 				font-weight: 900;
 				padding: 0;
 				border: none;
+				text-wrap: nowrap;
 				&::before { content: "[ " }
 				&::after { content: " ]" }
 			}
