--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -7,8 +7,8 @@
 	</div>
 	<div class="right">
 		<div class="nav-link animate"><a href="/index.html">Homepage</a></div>
-		<div class="nav-link animate"><a href="/boxes.html">Box</a></div>
-		<div class="nav-link animate"><a href="/colors.html">Colors</a></div>
+		<div class="nav-link animate"><a href="/boxes">Box</a></div>
+		<div class="nav-link animate"><a href="/colors">Colors</a></div>
 		<div class="nav-link animate"><a href="foo.html">Foo</a></div>
 	</div>
 </nav>
