moved everything other than the homepage to corresponding subdirectories, also separated the styles for each page

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -6,9 +6,9 @@
 		<div class="nav-btn animate" onclick="print_viewport()"><button>btn_3</button></div>
 	</div>
 	<div class="right">
-		<div class="nav-link animate"><a href="/index.html">Homepage</a></div>
+		<div class="nav-link animate"><a href="/">Homepage</a></div>
 		<div class="nav-link animate"><a href="/boxes">Box</a></div>
 		<div class="nav-link animate"><a href="/colors">Colors</a></div>
-		<div class="nav-link animate"><a href="foo.html">Foo</a></div>
+		<div class="nav-link animate"><a href="/foo">Foo</a></div>
 	</div>
 </nav>
